<resources>
    <string name="app_name">GastoViagem</string>
    <string name="distancia">distancia</string>
    <string name="total_de_quilometros">Total de Quilometros</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço Por Litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="km_por_litro">KM Por Litro</string>
    <string name="seu_gasto_total_sera_de">Seu gasto total será de</string>
    <string name="valor_total">R$ 0</string>
    <string name="calcular">Calcular</string>
    <string name="preencha_os_campos_corretamente">Preencha os campos corretamente</string>
</resources>